fixing too much border

--- a/projects/wui/scss/screen/appbar.scss
+++ b/projects/wui/scss/screen/appbar.scss
@@ -13,7 +13,6 @@ wui-app-bar {
     padding-left: .25rem;
     padding-right: .25rem;
     z-index: 99;
-    border-bottom: 1px solid $theme-border;
 
     div.wui-app-bar {
         &-leading {
