--- a/projects/wui/scss/screen/drawer.scss
+++ b/projects/wui/scss/screen/drawer.scss
@@ -5,7 +5,6 @@ wui-drawer {
     width: 100%;
     max-width: 230px;
     padding-right: 1.5rem;
-    border-right: 1px solid $theme-border;
 
     &-header {
         padding-top: 1.5rem;
